[gd_scene load_steps=4 format=3 uid="uid://dl0imxkurplp6"]

[ext_resource type="Script" path="res://bubble/bullet_bubble.gd" id="1_6rskl"]
[ext_resource type="PackedScene" uid="uid://y3hkvfbojgfi" path="res://bubble/lightweight_bubble.tscn" id="1_s5fix"]

[sub_resource type="SphereShape3D" id="SphereShape3D_2q2r0"]
radius = 0.327797

[node name="BulletBubble" type="Area3D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_6rskl")

[node name="Bubble" parent="." instance=ExtResource("1_s5fix")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_2q2r0")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
